# GPU_Architectures_TUWIEN

./: .gitignore  CMakeLists.txt  README.md  run_100_to_1k.sh  run_1k_to_10k.sh  run_all_kernels_single_instance.sh  run_single.sh
Graph_generator_Cpp/: Generate_Graph.cpp  GraphGen.dev  Makefile.win  input.txt  output.txt
data/: graph_complete_n_10  graph_complete_n_100  graph_custom_n_10000_density_0001_s_42  graph_custom_n_1000_density_02_s_42  graph_custom_n_100_density_02_s_42  graph_custom_n_10_density_02_s_42  graph_empty_n_10  graph_empty_n_100  graph_empty_n_1000  graph_empty_n_10000  graph_erdos_n_10000_p_0001_s_42  graph_erdos_n_1000_p_01_s_42  graph_erdos_n_100_p_01_s_42  graph_erdos_n_10_p_01_s_42  graph_path_n_10  graph_path_n_100  graph_path_n_1000  graph_path_n_10000  graph_ring_n_10  graph_ring_n_100  graph_ring_n_1000  graph_ring_n_10000  graph_scale_n_10000_a_041_b_054_g_005_din_02_dout_0_s_42  graph_scale_n_1000_a_041_b_054_g_005_din_02_dout_0_s_42  graph_scale_n_100_a_041_b_054_g_005_din_02_dout_0_s_42  graph_scale_n_10_a_041_b_054_g_005_din_02_dout_0_s_42  graph_tree_n_10000_s_42  graph_tree_n_1000_s_42  graph_tree_n_100_s_42  graph_tree_n_10_s_42
py_graph_generator/: README.md  environment.yml  generate_all_types.sh  generate_rnd_n_100-1k_samples10.sh  generate_rnd_n_1k-10k_samples5.sh  main.py  plot_graph.py  plot_results.py
src/: main.cu
src/cpuSolver/: cpu1_FW.cuh
src/gpuSolver/: Kernel1_MatrixMulti.cuh  Kernel2_FW_naive.cuh  Kernel3_FW_pinned.cuh  Kernel4_FW_zeroCopy.cuh  Kernel5_FW_pitched.cuh  Kernel6_FW_pitched2Dblock.cuh  (+3 more)
(+1 files in other folders)
